# audio_common

audio_capture/: CMakeLists.txt  package.xml
audio_capture/launch/: capture_raw_audio_mono.launch
audio_capture/src/: audio_capture.cpp
audio_common_msgs/: CMakeLists.txt  package.xml
audio_common_msgs/msg/: AudioDataStamped.msg  AudioFormat.msg
audio_play/: CMakeLists.txt
audio_play/launch/: play_aviary_audio.launch  play_raw_mono_audio.launch
audio_play/src/: raw_audio_player.cpp
